# TenCap

./: .gitignore  README.md  pyproject.toml  tc.py
tencap/: __init__.py  core.py
tests/: test_tencap_basic.py  test_tencap_torch.py
