[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tencap"
version = "0.1.0"
description = "TenCap: a lightweight tensor/ndarray capture utility."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
torch = ["torch"]

[tool.setuptools]
packages = ["tencap"]
py-modules = ["tc"]
